--- a/client/src/components/banner/Banner.css
+++ b/client/src/components/banner/Banner.css
@@ -1,11 +1,29 @@
 .banner {
-	background-image: url('../../images/banner4.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
+	position: relative;
 	height: 90vh;
 	color: white;
-}
+  }
+  
+  .video-background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+  }
+  
+  .video-background video {
+	width: 100%;
+	height: 100vh;
+	object-fit: cover;
+  }
+  
+  .content {
+	position: relative;
+	z-index: 1; 
+  }
+  
 
 .order-btn {
 	background-color: white;
